forge/tests/errors/undefined_var.fg
// Error test: using undefined variable
fn main() {
  let y = 10
  println(string(x))
}
